Fixed search bar on mobile

--- a/app/assets/stylesheets/cocktails.scss
+++ b/app/assets/stylesheets/cocktails.scss
@@ -154,11 +154,11 @@ h1 {
   #navbarSupportedContent {
     display: block;
   }
+  #navbarSupportedContent button {
+    width: 50px;
+  }
   #navbarSupportedContent button i {
     float: right;
-  }
-  .new {
-    width: 100%;
   }
 }
 
